--- a/index.html
+++ b/index.html
@@ -4,32 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
 
   <body>
+
+<!-- Логотип сайта -->
+
     <header class="header">
       <a href="./index.html" class="logo">
-        <img src="" alt="Логотип" />
+        Galery*Store*&more*
       </a>
+      
+<!-- Навигация по сайту -->
 
-      <nav class="pagination">
-        <ul class="pagination-list">
+      <nav >
+        <ul class="pagination list">
           <li class="pagination-item">
-            <a href="" class="pagination-link">Про нас</a>
+            <a href="" class="pagination-link  link">Про нас</a>
           </li>
           <li class="pagination-item">
-            <a href="" class="pagination-link">Послуги та ціни</a>
+            <a href="" class="pagination-link link">Послуги та ціни</a>
           </li>
           <li class="pagination-item">
-            <a href="" class="pagination-link">Майстри</a>
+            <a href="" class="pagination-link link">Майстри</a>
           </li>
           <li class="pagination-item">
-            <a href="" class="pagination-link">Контакти</a>
+            <a href="" class="pagination-link link">Контакти</a>
           </li>
         </ul>
       </nav>
+
+<!-- Контактный список -->
 
       <ul class="contact-list">
         <li class="contact-item">
@@ -40,6 +47,8 @@
         </li>
       </ul>
 
+<!-- Ссылки на соц.сети -->
+
       <ul lang="en">
         <li><a href="">Instagram</a></li>
         <li><a href="">Youtube</a></li>
@@ -47,14 +56,19 @@
     </header>
 
     <main>
+
+<!-- Первая секция -->
+
       <section>
-        <p>A hair salon for men in Kyiv</p>
-        <h1>BarberShop</h1>
+        <p lang="en">A hair salon for men in Kyiv</p>
+        <h1 lang="en">BarberShop</h1>
         <p>
           Ми експерти у модних чоловічих стрижках. Працюємо швидко, обережно та
           зі смаком.
         </p>
       </section>
+
+<!-- Про нас -->
 
       <section>
         <p>ПРО НАС</p>
@@ -71,6 +85,9 @@
         </p>
         <button type="button">онлайн-запис</button>
       </section>
+
+
+<!-- Услуги и цены -->
 
       <section>
         <p>Проведи час у компанії кращих майстрів</p>
@@ -90,6 +107,8 @@
         </ul>
         <button type="button">онлайн-запис</button>
       </section>
+
+<!-- Статистика -->
 
       <section>
         <ul class="Whywe-list">
@@ -119,7 +138,10 @@
         </p>
       </section>
 
+<!-- Наши мастера -->
+
       <section>
+
         <p>для справжніх шанувальників атмосфери</p>
         <h2>Наші майстри</h2>
         <ul>
